# python-terminal

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  pyquest_ux_improvement_plan.md  setup_termux.sh
assets/ascii/: logo.txt
assets/designs/borders/: minimal.py
assets/designs/themes/: __init__.py  default.py  high_contrast.py  termux.py
data/: topic_progress.json
engine/: __init__.py  acts.py  avatars.py  battlepass.py  collection.py  console.py  curriculum.py  executor.py  menu.py  panel.py  profile.py  pyhelp.py  renderer.py  schema.py  state.py  validator.py
examples/advanced/: 01_async.py
examples/basics/: 01_variables.py  02_strings.py  03_conditionals.py  04_loops.py
tests/: conftest.py  run_all.py  test_acts.py  test_battlepass.py  test_collection.py  test_curriculum.py  test_discovery.py  test_executor.py  test_indentation.py  test_main.py  test_map.py  test_panel.py  test_profile.py  test_pyhelp.py  test_renderer.py  test_responsive.py  test_schema.py  test_state.py  test_validator.py
tests/test_zones/: test_zone_validity.py
ui/: __init__.py  components.py  editor.py  indentation.py  responsive.py  themes.py
world/: __init__.py  discovery.py  map.py
world/zones/: __init__.py  zone_01_variables.py  zone_02_control.py  zone_03_funciones.py  zone_04_estructuras.py  zone_05_oop.py  zone_06_modulos.py  zone_07_archivos.py  zone_08_decoradores.py  zone_09_generators.py  zone_10_async.py  zone_11_testing.py  zone_12_tools.py  zone_13_excepciones.py  zone_14_context.py  zone_15_datos.py
