[project]
name = "pyquest"
version = "1.0.0"
description = "PyQuest — Terminal RPG para aprender Python"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
]

[project.scripts]
pyquest = "main:main"
pyquest-test = "tests.run_all:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "tests/test_zones"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["engine*", "ui*", "world*", "assets*"]
